--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Author URL: http://w3layouts.com
                     </div>
                         
                         <div class="magic1" style="float: right;">
-                        <a href="#" class="btn btn-style btn-success mt-lg-5 mt-4 me-md-2">Hello..This is TheWebOga</a>
+                        <a href="#" class="btn btn-style btn-success mt-lg-5 mt-4 me-md-2">Hi There..This is TheWebOga</a>
                         <br>
                     </div>
                         <br>
