--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Author URL: http://w3layouts.com
                     
                 </div>
                 <div class="col-lg-5 text-lg-end my-image mt-lg-0 mt-4">
-                    <img src="assets/images/banner.png" class="img-fluid" />
+                    <img src="assets/images/1.png" class="img-fluid" />
                 </div>
             </div>
         </div>
@@ -309,7 +309,7 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <div class="col-lg-5 ps-lg-5 my-image mt-lg-0 mt-4">
-                    <img src="assets/images/banner.png" alt="" class="img-fluid">
+                    <img src="assets/images/1.png" alt="" class="img-fluid">
                 </div>
 
             </div>
