--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Author URL: http://w3layouts.com
                 </div>
                 <br>
                 <div class="col-lg-7 w3l-about-info px-lg-4 align-center">
-                    <h6 class="w3l-title-small mb-1">About Me</h6>
+                    <h6 class="w3l-title-small mb-1">Here I Am</h6>
                     <h3 class="w3l-title-main mb-2">My Name is Promise but they call me TheWebOga</h3>
                     <p class="my-4 pe-lg-5">I am a UI/UX Designer & Web Developer based in Nigeria. I have many years of experience and i am passionate about cutting edge, pixel perfect, beautiful interfaces and intuitively implemented UX</p>
                    
@@ -299,7 +299,7 @@ Author URL: http://w3layouts.com
                             <i class="fas fa-layer-group"></i>
                             <div class="detail ms-3">
                                 <h4 class="w3l-subtitle">Creative Design</h4>
-                                <p>generating innovative and visually appealing solutions to meet specific objectives
+                                <p>Generating innovative and visually appealing solutions to meet specific objectives
                                 </p>
                             </div>
                         </div>
