--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
 
                         <!--/right-btn-->
@@ -433,7 +433,7 @@ Author URL: http://w3layouts.com
 
 
      <!-- footer -->
-     <footer class="text-center">
+     <footer class="text-center" id="contact">
         <div class="footer py-5">
             <div class="container py-md-4">
                 <div clss="footer-logo">
