--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ Author URL: http://w3layouts.com
                     <br>
                      <div class="w3l-btn">
                         
-                        <a href="assets/cv.pdf" class="btn btn-style btn-secondary mt-lg-5 mt-4">View My CV</a>
+                        <a href="assets/cv1.pdf" class="btn btn-style btn-secondary mt-lg-5 mt-4">View My CV</a>
                     </div>
                 </div>
                 <div class="footer-contact-info mt-4">
