--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Author URL: http://w3layouts.com
                     <p class="bird">Look no further, I can
                         give your business an exceptional digital experience!</p>
                     <div class="flow">
-                    <a class="btn btn-danger btn-style mt-5 me-2" href="contact.html"> Hire Me </a>
+                    <a class="btn btn-danger btn-style mt-5 me-2" href="#contact"> Hire Me </a>
                 </div>
                     
                     
