--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <div class="col-lg-5 ps-lg-5 my-image mt-lg-0 mt-4">
-                    <img src="assets/images/1.png" alt="" class="img-fluid">
+                    <img src="assets/images/webb.png" alt="" class="img-fluid">
                 </div>
 
             </div>
