--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ Author URL: http://w3layouts.com
 
                     <div class="w3l-btn">
                         
-                        <a href="https://wa.link/j5v7gh" class="btn btn-style btn-secondary mt-lg-5 mt-4">Send Whatsapp Message</a>
+                        <a href="https://wa.link/j5v7gh" target=”_blank” class="btn btn-style btn-secondary mt-lg-5 mt-4">Send Whatsapp Message</a>
                     </div>
                 </div>
                 <div class="footer-contact-info mt-4">
