--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     <span class="image-block">
                         <a class="image-zoom" href="assets/images/blog1.jpg" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog1.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="assets/images/w2.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Architecture</h3>
                                 <p class="content-text">This is a short description</p>
@@ -363,7 +363,7 @@
                     <span class="image-block">
                         <a class="image-zoom" href="assets/images/blog2.jpg" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog2.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="assets/images/w3.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Corporate</h3>
                                 <p class="content-text">This is a short description</p>
@@ -373,7 +373,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-lg-0 mt-4" data-id="id-3" data-type="cat-item-3">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog3.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="assets/images/w4.png" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
                             <img src="assets/images/blog3.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
@@ -387,7 +387,7 @@
                     <span class="image-block">
                         <a class="image-zoom" href="assets/images/blog4.jpg" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog4.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="assets/images/w5.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Mobile UI</h3>
                                 <p class="content-text">This is a short description</p>
@@ -399,7 +399,7 @@
                     <span class="image-block">
                         <a class="image-zoom" href="assets/images/blog5.jpg" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog5.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="assets/images/w6.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Fashion</h3>
                                 <p class="content-text">This is a short description</p>
@@ -409,7 +409,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-4" data-id="id-7" data-type="cat-item-6">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog6.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="assets/images/w7.png" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
                             <img src="assets/images/blog6.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
