--- a/index.html
+++ b/index.html
@@ -349,24 +349,24 @@
             <div class="row portfolio-area clearfix p-0 m-0">
                 <div class="col-lg-4 col-md-6 portfolio-item2 content" data-id="id-1" data-type="cat-item-1">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog1.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="assets/images/w2.png" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
                             <img src="assets/images/w2.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
-                                <h3 class="content-title">Architecture</h3>
-                                <p class="content-text">This is a short description</p>
+                                <h3 class="content-title">EasyHowz Technology</h3>
+                                <p class="content-text">A real estate platform for renting and buy properties</p>
                             </div>
                         </a>
                     </span>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-md-0 mt-4" data-id="id-2" data-type="cat-item-2">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog2.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="assets/images/w3.png" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
                             <img src="assets/images/w3.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
-                                <h3 class="content-title">Corporate</h3>
-                                <p class="content-text">This is a short description</p>
+                                <h3 class="content-title">Villa</h3>
+                                <p class="content-text">A platform for booking reservations</p>
                             </div>
                         </a>
                     </span>
@@ -375,34 +375,34 @@
                     <span class="image-block">
                         <a class="image-zoom" href="assets/images/w4.png" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog3.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="assets/images/w4.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
-                                <h3 class="content-title">Ecommerce</h3>
-                                <p class="content-text">This is a short description</p>
+                                <h3 class="content-title">Smart Farm</h3>
+                                <p class="content-text">Agricultural investment platform</p>
                             </div>
                         </a>
                     </span>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-4" data-id="id-4" data-type="cat-item-4">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog4.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="assets/images/w5.png" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
                             <img src="assets/images/w5.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
-                                <h3 class="content-title">Mobile UI</h3>
-                                <p class="content-text">This is a short description</p>
+                                <h3 class="content-title">iHomes</h3>
+                                <p class="content-text">A Platform to hire home services proffessionals</p>
                             </div>
                         </a>
                     </span>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-4" data-id="id-5" data-type="cat-item-5">
                     <span class="image-block">
-                        <a class="image-zoom" href="assets/images/blog5.jpg" data-gal="prettyPhoto[gallery]">
+                        <a class="image-zoom" href="assets/images/w6.png" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
                             <img src="assets/images/w6.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
-                                <h3 class="content-title">Fashion</h3>
-                                <p class="content-text">This is a short description</p>
+                                <h3 class="content-title">Shopfair</h3>
+                                <p class="content-text">Online drift store</p>
                             </div>
                         </a>
                     </span>
@@ -411,10 +411,10 @@
                     <span class="image-block">
                         <a class="image-zoom" href="assets/images/w7.png" data-gal="prettyPhoto[gallery]">
                             <div class="content-overlay"></div>
-                            <img src="assets/images/blog6.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
+                            <img src="assets/images/w7.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
-                                <h3 class="content-title">Real Estate </h3>
-                                <p class="content-text">This is a short description</p>
+                                <h3 class="content-title">Spering </h3>
+                                <p class="content-text">A system for hiring freelancers</p>
                             </div>
                         </a>
                     </span>
