--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                             <img src="assets/images/w2.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">EasyHowz Technology</h3>
-                                <p class="content-text">A real estate platform for renting and buy properties</p>
+                                <p class="content-text">A real estate platform for renting and buying properties</p>
                             </div>
                         </a>
                     </span>
@@ -378,7 +378,7 @@
                             <img src="assets/images/w4.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Smart Farm</h3>
-                                <p class="content-text">Agricultural investment platform</p>
+                                <p class="content-text">An Agricultural investment platform</p>
                             </div>
                         </a>
                     </span>
@@ -390,7 +390,7 @@
                             <img src="assets/images/w5.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">iHomes</h3>
-                                <p class="content-text">A Platform to hire home services proffessionals</p>
+                                <p class="content-text">A Platform to hire home service proffessionals</p>
                             </div>
                         </a>
                     </span>
@@ -402,7 +402,7 @@
                             <img src="assets/images/w6.png" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
                                 <h3 class="content-title">Shopfair</h3>
-                                <p class="content-text">Online drift store</p>
+                                <p class="content-text">An Online drift store</p>
                             </div>
                         </a>
                     </span>
