--- a/index.html
+++ b/index.html
@@ -136,16 +136,15 @@
                             <h5 class="me-md-3">Follow me on </h5>
                         </li>
 
-                        <li><a href="https://in.linkedin.com/company/w3layouts"><span class="fab fa-behance"></span></a>
+                       
+
+                        <li><a href="https://www.linkedin.com/in/promise-okere-030b5a18a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BN5AvfAweRi%2BX7wwDAzHamg%3D%3D"><span class="fab fa-linkedin-in"></span></a>
                         </li>
 
-                        <li><a href="https://in.linkedin.com/company/w3layouts"><span class="fab fa-linkedin-in"></span></a>
-                        </li>
-
-                        <li><a href="https://www.facebook.com/w3layouts/">
+                        <li><a href="https://www.instagram.com/rex_isle/">
                                 <span class="fab fa-facebook-f"></span></a></li>
 
-                        <li><a href="https://twitter.com/W3layouts"><span class="fab fa-twitter"></span></a></li>
+                        <li><a href="https://twitter.com/Rexisle"><span class="fab fa-twitter"></span></a></li>
 
                     </ul>
                     
@@ -234,7 +233,7 @@
                         </div>
                     </div>
                     <div class="progress-info">
-                        <h6 class="progress-tittle">PHP</h6>
+                        <h6 class="progress-tittle">PHP &amp; Laravel Framework</h6>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                             </div>
