--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h1 class="mb-3" style="font-size: 23px;">Hi, are you looking for a website</h1>
                     <h3 class="mb-4"> <span class="typed-text"></span><span class="cursor">&nbsp</span> </h3>
                     <p class="bird">Look no further, I can
-                        give your business an exceptional digital experience!</p>
+                        give your idea or business an exceptional digital experience!</p>
                     <div class="flow">
                     <a class="btn btn-danger btn-style mt-5 me-2" href="#contact"> Hire Me </a>
                 </div>
