--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </div>
                  <div class="w3l-btn">
                         
-                        <a href="assets/cv1.pdf" class="btn btn-style btn-secondary mt-lg-5 mt-4">View My CV</a>
+                        <a href="assets/CVV.pdf" class="btn btn-style btn-secondary mt-lg-5 mt-4">View My CV</a>
                     </div>
             </div>
         </div>
