--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     
                 </div>
                 <div class="col-lg-5 text-lg-end my-image mt-lg-0 mt-4">
-                    <img src="assets/images/1.png" class="img-fluid" />
+                    <img src="assets/images/og.png" class="img-fluid" />
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@
                             <i class="fas fa-chalkboard"></i>
                         </div>
                         <div class="about-content">
-                            <h5 class="mb-3"><a href="#url">UI/UX designs</a></h5>
+                            <h5 class="mb-3"><a href="#url">Front-End designs</a></h5>
                             <p>I create interfaces that are not only functional and efficient but also delightful and satisfying for users to interact with.</p>
                         </div>
                     </div>
