--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col-lg-7 w3l-about-info px-lg-4 align-center">
                   
                     <h3 class="w3l-title-main mb-2">My Name is Promise but they call me TheWebOga</h3>
-                    <p class="my-4 pe-lg-5">I am a UI/UX Designer & Web Developer based in Nigeria. I have many years of experience and i am passionate about cutting edge, pixel perfect, beautiful interfaces and intuitively implemented UX</p>
+                    <p class="my-4 pe-lg-5">I am a Web Developer based in Nigeria. I have many years of experience and i am passionate about cutting edge, pixel perfect, beautiful interfaces and intuitively implemented UX</p>
                    
 
                     <ul class="follow-social mt-lg-5 mt-4">
