--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <section class="w3l-skills py-5" id="skills">
         <div class="container py-lg-5 py-md-4 py-3">
             <div class="row">
-                <div class="col-lg-6 pe-lg-5" style="background: url(assets/images/about1.jpg) no-repeat fixed;background-size: contain;">
+                <div class="col-lg-6 pe-lg-5" style="background: url(assets/images/ogg.png) no-repeat fixed;background-size: contain;">
                     
                 </div>
                 <div class="col-lg-6 mt-lg-0 mt-5 w3l-content-6 px-lg-4 align-self-center">
